--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,19 @@
+#icon {
+    -moz-transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+    transition: all .3s linea;
+}
+#icon2 {
+    -moz-transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+    transition: all .3s linea;
+}
+.down {
+    -moz-transform:rotate(90deg);
+    -webkit-transform:rotate(90deg);
+    transform:rotate(90deg);
+}
+
 #mydropdown{
     width: 100%;
     background-color: aqua;
@@ -27,7 +43,7 @@ li a{
 }
 
 .flex-column .nav-item .nav-link:hover{
-    color: aqua;
+    color: cadetblue!important;
 }
 
 #dropstyle{
