--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,92 @@
+.d-flex{
+    padding-top: 30px;
+}
+.nav-tabs--vertical {
+  border-bottom: none;
+  border-right: 1px solid #ddd;
+  display: flex;
+  flex-flow: column nowrap;
+}
+.nav-tabs--left {
+  margin: 0 15px;
+}
+.nav-tabs--left .nav-item + .nav-item {
+  margin-top: 0.25rem;
+}
+.nav-tabs--left .nav-link {
+  transition: border-color 0.125s ease-in;
+  white-space: nowrap;
+}
+.nav-tabs--left .nav-link:hover {
+  background-color: #f7f7f7;
+  border-color: transparent;
+}
+.nav-tabs--left .nav-link.active {
+  border-bottom-color: #ddd;
+  border-right-color: #fff;
+  border-bottom-left-radius: 0.25rem;
+  border-top-right-radius: 0;
+  margin-right: -1px;
+}
+.nav-tabs--left .nav-link.active:hover {
+  background-color: #fff;
+  border-color: #0275d8 #fff #0275d8 #0275d8;
+}
+
+/*
+.icon-bar {
+  position: absolute;
+  top : 1930px;
+    right:0px;
+  -webkit-transform: translateY(90%);
+  -ms-transform: translateY(-90%);
+  transform: translateY(90%);
+}
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 5px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+}
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.google {
+  background: #dd4b39;
+  color: white;
+}
+
+.linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.content {
+  margin-left: 75px;
+  font-size: 30px;
+}
+*/
+/*close social icon css*/
+
+
 #icon {
     -moz-transition: all .3s linear;
     -webkit-transition: all .3s linear;
@@ -109,6 +198,7 @@ li.dropdown.open .dropdown-menu {
     background-color: cornflowerblue;
 }
 #choosepanel{
+     transition: all .3s ease;
     background-color:white;cursor: pointer
 }
 /*radio icon css start*/
