--- a/css/common.css
+++ b/css/common.css
@@ -1,122 +1,24 @@
-.d-flex{
+/*global css*/
+ul {
+    list-style-type: none;
+	padding: 0;
+}
+h2{
+    font-family: 'raleway',sans-serif;
+    font-size: 35px;
+    text-align: center;
     padding-top: 30px;
 }
-.nav-tabs--vertical {
-  border-bottom: none;
-  border-right: 1px solid #ddd;
-  display: flex;
-  flex-flow: column nowrap;
-}
-.nav-tabs--left {
-  margin: 0 15px;
-}
-.nav-tabs--left .nav-item + .nav-item {
-  margin-top: 0.25rem;
-}
-.nav-tabs--left .nav-link {
-  transition: border-color 0.125s ease-in;
-  white-space: nowrap;
-}
-.nav-tabs--left .nav-link:hover {
-  background-color: #f7f7f7;
-  border-color: transparent;
-}
-.nav-tabs--left .nav-link.active {
-  border-bottom-color: #ddd;
-  border-right-color: #fff;
-  border-bottom-left-radius: 0.25rem;
-  border-top-right-radius: 0;
-  margin-right: -1px;
-}
-.nav-tabs--left .nav-link.active:hover {
-  background-color: #fff;
-  border-color: #0275d8 #fff #0275d8 #0275d8;
-}
-
-/*
-.icon-bar {
-  position: absolute;
-  top : 1930px;
-    right:0px;
-  -webkit-transform: translateY(90%);
-  -ms-transform: translateY(-90%);
-  transform: translateY(90%);
-}
-.icon-bar a {
-  display: block;
-  text-align: center;
-  padding: 5px;
-  transition: all 0.3s ease;
-  color: white;
-  font-size: 20px;
-}
-.icon-bar a:hover {
-  background-color: #000;
-}
-
-.facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.google {
-  background: #dd4b39;
-  color: white;
-}
-
-.linkedin {
-  background: #007bb5;
-  color: white;
-}
-
-.youtube {
-  background: #bb0000;
-  color: white;
-}
-
-.content {
-  margin-left: 75px;
-  font-size: 30px;
-}
-*/
-/*close social icon css*/
-
-
-#icon {
-    -moz-transition: all .3s linear;
-    -webkit-transition: all .3s linear;
-    transition: all .3s linea;
-}
-#icon2 {
-    -moz-transition: all .3s linear;
-    -webkit-transition: all .3s linear;
-    transition: all .3s linea;
-}
-.down {
-    -moz-transform:rotate(90deg);
-    -webkit-transform:rotate(90deg);
-    transform:rotate(90deg);
-}
-
-#mydropdown{
-    width: 100%;
-    background-color: aqua;
-    position: fixed;
-    top:50px;
-    z-index: 9999;
-    visibility:
-}
-/*#home:hover div#mydropdown{opacity:1.0;}*/
 li a{
     font-size: 18px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
-
+ #footerlogo{
+        height: 40px;width: 140px;margin-top:10px;
+}
+.form-control{
+    border-radius:1rem;
+}
 .flex-column .nav-item .nav-link{
     font-family: 'raleway',sans-serif;
     font-size: 17px;
@@ -134,75 +36,38 @@ li a{
 .flex-column .nav-item .nav-link:hover{
     color: cadetblue!important;
 }
+/*close global css*/
 
-#dropstyle{
-    background-color: black;
+#icon {
+    -moz-transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+    transition: all .3s linea;
 }
-/*side menu css*/
-ul {
-    list-style-type: none;
-	padding: 0;
+#icon2 {
+    -moz-transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+    transition: all .3s linea;
 }
-
-#sidebar-menu .main-menu a {
-    display: block;
-	font-size: 13px;
-	font-weight: 500;
-	color: #999;
-	padding: 4px 10px;
+.down {
+    -moz-transform:rotate(90deg);
+    -webkit-transform:rotate(90deg);
+    transform:rotate(90deg);
 }
-#sidebar-menu .main-menu a:hover {
-	color: #11427D;
-	text-decoration: none;
-	background-color: transparent;
-	border-left: 1px solid #11427D;
-}
-/*closem side menu css*/
 #mainlogoimg{
     width:180px;
     height:60px; 
 }
+
 #mainlogo{
     position: absolute;
     top : -35px;
     left:0px;
 }
- #footerlogo{
-        height: 45px;width: 160px;margin-top:10px;
-    }
 
-#dropdown li a{
-    color: black;
-    font-size: 16px;
-}
-#maincontent{
-    background-image: url("/img/banner1-min.jpg");
-}
-.form-control{
-    border-radius:1rem;
-}
-#copyrights{
-     padding:0px;
-    margin-top: -29px;
-}
 
-li.dropdown.open .dropdown-menu {
-  display:table;
-  border-radius: 0px;
-  width: 100%;
-  text-align: center;
-  left: 0;
-  right: 0;
-}
-#choosepanel:hover{
-    background-color: cornflowerblue;
-}
-#choosepanel{
-     transition: all .3s ease;
-    background-color:white;cursor: pointer
-}
-/*radio icon css start*/
+/* form radio icon css start*/
 
+/*
 .custom-radios div {
   display: inline-block;
 }
@@ -253,7 +118,8 @@ li.dropdown.open .dropdown-menu {
   display: inline-block;
 
 }
-/*radio css end*/
+*/
+/*form radio css end*/
 
 /* footer social icons */
 ul.social-network {
@@ -266,9 +132,6 @@ ul.social-network li {
 	display: inline;
 	margin: 0 5px;
 }
-
-
-/* footer social icons */
 .social-network a.icoRss:hover {
 	background-color: #F56505;
 }
@@ -317,10 +180,6 @@ ul.social-network li {
     }
     #mainlogo{
         margin: 0px;;padding: 0px;
-    }
-    #dropdown li a{
-    color: whitesmoke;
-    font-size: 14px;
     }
     #footerlogo{
         width: 170px;
