--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -30,13 +30,12 @@
   width:100%;
   left:0;
   right:0;
-    margin-top: -2px;
 /*  height of nav-item  */
   
   display:block;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity 0.3s linear;
+  transition: visibility 0.2s, opacity 0.3s ease;
   
 }
   
@@ -48,7 +47,7 @@
   display:block;
   visibility: visible;
   opacity: 1;
-  transition: visibility 0s, opacity 0s linear;
+  transition: visibility 0.2s, opacity 0s linear;
 }
   
   .navbar .dropdown-menu {
