--- a/css/index.css
+++ b/css/index.css
@@ -2,21 +2,48 @@
     background-image: url("/img/banner1-min.jpg");
     padding-top: 50px;padding-bottom: 22px;
 }
+#lorempara{
+    cursor: pointer;
+}
+#WebReadmore{opacity: 0;
+transition: opacity .35s ease;}
+
+#lorempara:hover #WebReadmore{
+    opacity: 1;
+}
 .why{
      text-align:center;font-family: 'Raleway', sans-serif;padding:15px;font-size: 16px;
 }
+
+#projects{
+     line-height: 30px;font-family: 'raleway'san-serif;font-size: 18px;list-style:disc;padding-left: 70px;
+}
+#projects li{
+    padding: 5px;
+}
 #choosepanel:hover{
- background-color: skyblue;
+/*background: rgba(0, 0, 0, .1);*/
 }
 #choosepanel{
-     transition: all .3s ease;
-    background-color:white;
+/*
+   background: rgba(0, 0, 0, 0);
+  transition: background 0.5s ease;
+*/
+
 }
 #choosepanel img{
    margin:5px;margin-top:20px;
     width:100px;height:100px;
 }
-
+#progress{
+    height: 5px;background-color: orangered;width: 15%;
+    padding: 0px;margin: 0px;
+     -webkit-transition: width 0.7s ease; /* For Safari 3.1 to 6.0 */
+    transition: width 0.7s ease;
+}
+#choosepanel:hover #progress{
+    width: 90%;
+}
 .nav-tabs--vertical {
   border-bottom: none;
   border-right: 1px solid #ddd;
