--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,33 @@
 #maincontent{
-    background-image: url("/img/banner1-min.jpg");
+/*    background-image: url("/img/banner1-min.jpg");*/
     padding-top: 50px;padding-bottom: 22px;
+    	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
 }
+.tab-pane h2{
+    padding-top: 10px;
+    border-radius: 20px;
+    padding-bottom: 10px;
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background-size: 400% 400%;
+    -webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
+}
+
 #lorempara{
     cursor: pointer;
 }
-#WebReadmore{opacity: 0;
-transition: opacity .35s ease;}
+#WebReadmore{
+    background-color: whitesmoke!important;color: black!important;
+    transition: all .35s ease;}
 
 #lorempara:hover #WebReadmore{
-    opacity: 1;
+    background-color: lightseagreen!important;color: white!important;
+    
 }
 .why{
      text-align:center;font-family: 'Raleway', sans-serif;padding:15px;font-size: 16px;
