--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,20 @@
 #maincontent{
 /*    background-image: url("/img/banner1-min.jpg");*/
-    padding-top: 50px;padding-bottom: 22px;
-    	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+   
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
 	background-size: 400% 400%;
 	-webkit-animation: Gradient 15s ease infinite;
 	-moz-animation: Gradient 15s ease infinite;
 	animation: Gradient 15s ease infinite;
 }
+.maincontent{
+     padding-top: 50px;padding-bottom: 22px;
+}
+/*
+#hello:hover .row #cirlce{
+    background: linear-gradient(-45deg,blue,red,pink);
+}
+*/
 .tab-pane h2{
     padding-top: 10px;
     border-radius: 20px;
@@ -30,7 +38,11 @@
     
 }
 .why{
-     text-align:center;font-family: 'Raleway', sans-serif;padding:15px;font-size: 16px;
+     text-align:center;font-family: 'Raleway', sans-serif;padding:15px;font-size: 15px;
+}
+#choosepanel h2{
+    font-size: 28px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #projects{
@@ -51,7 +63,7 @@
 }
 #choosepanel img{
    margin:5px;margin-top:20px;
-    width:100px;height:100px;
+    width:80px;height:80px;
 }
 #progress{
     height: 5px;background-color: orangered;width: 15%;
