--- a/css/index.css
+++ b/css/index.css
@@ -66,8 +66,9 @@
 }
 .nav-tabs--vertical {
   border-bottom: none;
-  border-right: 1px solid #ddd;
+/*  border-right: 1px solid #ddd;*/
   display: flex;
+    margin-right: 0px!important;
   flex-flow: column nowrap;
 }
 .nav-tabs--left {
@@ -90,8 +91,9 @@
   border-bottom-left-radius: 0.25rem;
   border-top-right-radius: 0;
   margin-right: -1px;
+    background-color: burlywood;
 }
 .nav-tabs--left .nav-link.active:hover {
-  background-color: #fff;
-  border-color: #0275d8 #fff #0275d8 #0275d8;
+/*  background-color: #fff;*/
+/*  border-color: #0275d8 #fff #0275d8 #0275d8;*/
 }
